--- a/history.txt
+++ b/history.txt
@@ -1,26 +1,45 @@
-pip list > pip2_ori.txt
-pip3 list > pip3_ori.txt
+# disable selinux
+vi /etc/sysconfig/selinux
 
-dnf install gcc gcc-c++ make gnome-tweak-tool.noarch libpng12 libGLU  privoxy fasd neovim tmux nodejs ctags golang gcc gcc-c++ make -y
-dnf -y install clamtk clamav clamav-update && freshclam
-dnf -y install gstreamer-plugins-base gstreamer1-plugins-base gstreamer-plugins-bad gstreamer-plugins-ugly gstreamer1-plugins-ugly gstreamer-plugins-good-extras gstreamer1-plugins-good-extras gstreamer1-plugins-bad-freeworld ffmpeg gstreamer-ffmpeg
-
-rpm -ivh wps-office-10.1.0.5672-1.a21.x86_64.rpm 
-
+# stop and disable firewalled 
 systemctl stop firewalld.service
 systemctl disable firewalld.service
 
+# backup pip list
+pip list > pip2_ori.txt
+pip3 list > pip3_ori.txt
 
+# uninstall some software use gnome-software
+
+# install base tools
+dnf install vim gcc gcc-c++ make gnome-tweak-tool.noarch libpng12 libGLU  privoxy fasd neovim tmux nodejs ctags golang gcc gcc-c++ make -y
+
+# install virtus check
+dnf -y install clamtk clamav clamav-update && freshclam
+
+# install decode for player
+dnf -y --nogpgcheck install gstreamer-plugins-base gstreamer1-plugins-base gstreamer-plugins-bad gstreamer-plugins-ugly gstreamer1-plugins-ugly gstreamer-plugins-good-extras gstreamer1-plugins-good-extras gstreamer1-plugins-bad-freeworld ffmpeg gstreamer-ffmpeg
+
+# download wps and install wps need cp windows fonts to /usr/share/fonts/winxxx
+rpm -ivh wps-office-10.1.0.5672-1.a21.x86_64.rpm 
+
+# proxy
 pip install https://github.com/shadowsocks/shadowsocks/archive/master.zip -U
 dnf install libsodium libsodium-devel -y
 
+# config privoxy
+vim /etc/privoxy/config
 systemctl start privoxy
+
+# start proxy
 export http_proxy='http://127.0.0.1:8118'
 export https_proxy='http://127.0.0.1:8118'
+
+# install chrome
 dnf install google-chrome-stable -y
 set | grep https
 unset http_proxy && unset https_proxy && systemctl stop privoxy.service
 set | grep https
 
-
+# update system
 dnf --nogpgcheck update -y
