--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,7 @@
 # disable selinux
-vi /etc/sysconfig/selinux
+sed -i 's/SELINUX=enforcing/SELINUX=disabled/' /etc/sysconfig/selinux
+sed -i 's/SELINUX=targeted/#SELINUX=targeted/' /etc/sysconfig/selinux
+
 
 # stop and disable firewalled 
 systemctl stop firewalld.service
@@ -12,7 +14,7 @@ pip3 list > pip3_ori.txt
 # uninstall some software use gnome-software
 
 # change boot order
-vi /boot/grub2/grubenv 
+sed -i 's/saved_entry=2/saved_entry=0/' /boot/grub2/grubenv
 
 # change right
 chown yanqing4:yanqing4 /data{0,1}
@@ -26,10 +28,7 @@ rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-rpmfusion-*
 dnf update -y
 
 # install base tools
-dnf -y install vim gcc gcc-c++ ctags clang make gnome-tweak-tool.noarch
-libpng12 libGLU  privoxy fasd neovim tmux nodejs ctags golang gcc gcc-c++ make
-ibus-table-chinese-wubi-jidian  httpd mariadb-server mariadb-devel php
-php-mbstring php-pear php-gd composer
+dnf -y install vim gcc gcc-c++ ctags clang make gnome-tweak-tool.noarch libpng12 libGLU  privoxy fasd neovim tmux nodejs ctags golang gcc gcc-c++ make ibus-table-chinese-wubi-jidian  httpd mariadb-server mariadb-devel php php-mbstring php-pear php-gd composer
 
 
 # install virtus check
@@ -38,18 +37,20 @@ dnf -y install clamtk clamav clamav-update && freshclam
 # install decode for player
 dnf -y install gstreamer-plugins-base gstreamer1-plugins-base gstreamer-plugins-bad gstreamer-plugins-ugly gstreamer1-plugins-ugly gstreamer-plugins-good-extras gstreamer1-plugins-good-extras gstreamer1-plugins-bad-freeworld ffmpeg gstreamer-ffmpeg
 
+# need mannul
 # download wps and install wps need cp windows fonts to /usr/share/fonts/winxxx
-mkdir /usr/share/fonts/win7
-cp -pr /run/media/yanqing4/OS/Windows/Fonts/*.ttf .
-cp -pr /run/media/yanqing4/OS/Windows/Fonts/*.TTF .
-rpm -ivh wps-office-10.1.0.5672-1.a21.x86_64.rpm 
+# mkdir /usr/share/fonts/win7
+# cp -pr /run/media/yanqing4/OS/Windows/Fonts/*.ttf .
+# cp -pr /run/media/yanqing4/OS/Windows/Fonts/*.TTF .
+# rpm -ivh wps-office-10.1.0.5672-1.a21.x86_64.rpm 
 
 # proxy
 pip install https://github.com/shadowsocks/shadowsocks/archive/master.zip -U
-dnf install libsodium libsodium-devel -y
+dnf -y install libsodium libsodium-devel
 
 # config privoxy
-vim /etc/privoxy/config
+echo -e "forward-socks5t   /               127.0.0.1:1080 .\nlisten-address localhost:8118\nforward         192.168.*.*/     .\nforward 10.*.*.*/     .\nforward           127.*.*.*/     .\n" >> /etc/privoxy/config
+
 systemctl start privoxy
 
 # start proxy
@@ -57,14 +58,12 @@ export http_proxy='http://127.0.0.1:8118'
 export https_proxy='http://127.0.0.1:8118'
 
 # install chrome rember add google repo
-dnf install google-chrome-stable -y
-set | grep https
+dnf -y install google-chrome-stable
 unset http_proxy && unset https_proxy && systemctl stop privoxy.service
-set | grep https
 
 # config nvim
-mkdir /usr/share/fonts/powerline_fonts && cp -r ~/sw/linux_vim/DejaVuSansMono /usr/share/fonts/powerline_fonts
-cp  ~/sw/linux_vim/sysinit.vim  /usr/share/nvim/
+# mkdir /usr/share/fonts/powerline_fonts && cp -r ~/sw/linux_vim/DejaVuSansMono /usr/share/fonts/powerline_fonts
+# cp  ~/sw/linux_vim/sysinit.vim  /usr/share/nvim/
 
 # fonts config
 cd /usr/share/fonts
@@ -73,7 +72,7 @@ mkfontdir
 fc-cache -fv
 
 cp /root/.fzf.bash  /home/yanqing4/ && chown yanqing4:yanqing4 ~/.fzf.bash
-# add [ -f ~/.fzf.bash ] && source ~/.fzf.bash to ~/.bahrc
+echo "[ -f ~/.fzf.bash ] && source ~/.fzf.bash" >> /home/yanqing4/.bahrc
 
 
 # add flash plugin
@@ -82,7 +81,7 @@ rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-adobe-linux
 dnf -y install flash-plugin
 
 # 解决中文显示出现高低不平问题
-dnf install wqy-bitmap-fonts wqy-unibit-fonts wqy-zenhei-fonts wqy-microhei-fonts
+dnf  -y install wqy-bitmap-fonts wqy-unibit-fonts wqy-zenhei-fonts wqy-microhei-fonts
 
 # 解决启动速度慢的问题
 # systemd-analyze blame
