解决vim-autoformat 不能使用eslint格式化代码的问题

--- a/history.txt
+++ b/history.txt
@@ -99,3 +99,5 @@ dnf  -y install the_silver_searcher
 # install eslint for vim nvim javascript syntax check
 npm install -g eslint
 
+# for javascript vim-autoformater
+ln -sf /usr/bin/eslint  /usr/local/bin/eslint
